# cascade_facial_emotion_recognition

./: .gitignore  Changelog.md  README.md  environment.yml  pyproject.toml
cascade_fer/: __init__.py  live_fer.py
cascade_fer/models/: __init__.py  cascade_fer.py  cv_face_detector.py
cascade_fer/utils/: __init__.py  utils.py
media/: emotion_recognition.avi
tests/: test_cascade_fer.py  test_emotion_tracker.py  test_find_facial_landmarks.py  test_live_fer.py  test_version.py
